Login page + EF base

--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav
-    class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3"
+    class="navbar secondary bg-dark-subtle  navbar-expand-sm navbar-toggleable-sm mb-3"
   >
     <div class="container">
       <a class="navbar-brand" [routerLink]="['/']">CRMService</a>
