--- a/ClientApp/src/app/login-page/login-page.component.html
+++ b/ClientApp/src/app/login-page/login-page.component.html
@@ -17,3 +17,12 @@
     </form>
   </div>
 </div>
+<ng-container *ngIf="isVisible">
+  <div class="row justify-content-center">
+    <div class="col-3 card bg-danger-subtle m-1 mb-2 border-danger-subtle border-2 pb-2 pt-2">
+      <div class="card-content text-danger-emphasis">
+        Wrong password or email
+      </div>
+    </div>
+  </div>
+</ng-container>
