--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,7 +1,6 @@
 <header>
   <nav
-    class="navbar secondary bg-dark-subtle  navbar-expand-sm navbar-toggleable-sm mb-3"
-  >
+    class="navbar secondary bg-dark-subtle  navbar-expand-sm navbar-toggleable-sm">
     <div class="container">
       <a class="navbar-brand" [routerLink]="['/']">CRMService</a>
       <button
@@ -17,6 +16,9 @@
       </button>
       <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end" [ngClass]="{ show: isExpanded }">
         <ul class="navbar-nav flex-grow">
+          <li class="nav-item fs-5"><a class="nav-link" [routerLink]="['/dashboard']">Dashboard</a></li>
+          <li class="nav-item fs-5"><a class="nav-link" [routerLink]="['/project-list']">Projects</a></li>
+          <li class="nav-item fs-5"><a class="nav-link" [routerLink]="['/document-management']">Documents</a></li>
         </ul>
       </div>
     </div>
