--- a/ClientApp/src/app/document-management/document-management.component.html
+++ b/ClientApp/src/app/document-management/document-management.component.html
@@ -1,1 +1,142 @@
-<p>document-management works!</p>
+<div class="row p-2">
+  <div class="col">
+    <div class="card bg-body-tertiary border-0">
+      <div class="card-title text-center fs-4">Documents</div>
+      <div class="card-body">
+        <div class="row">
+          <div class="col-10">
+            <div class="input-group mt-2">
+              <input type="text" class="form-control" placeholder="Search for file..." aria-describedby="button-addon2">
+              <button class="btn btn-outline-primary" type="button" id="button-addon2">Find</button>
+            </div>
+          </div>
+          <div class="col-2 d-flex align-items-bottom">
+            <button class="btn btn-primary w-100 mt-2 ms-2 me-2">Add New</button>
+          </div>
+        </div>
+        <hr>
+        <div class="row m-2">
+          <div class="col-1 text-center"><fa-icon [icon]="faFile"></fa-icon> </div>
+          <div class="col-5 text-center">Name_of_file_there.pdf</div>
+          <div class="col-2 text-center">01.01.1900</div>
+          <div class="col-4 d-flex justify-content-center">
+            <button class="btn btn-primary me-1">Manage</button>
+            <button class="btn btn-success me-1 ms-1">Download</button>
+            <button class="btn btn-danger ms-1">Delete</button>
+          </div>
+        </div>
+        <div class="row m-2">
+          <div class="col-1 text-center"><fa-icon [icon]="faFile"></fa-icon> </div>
+          <div class="col-5 text-center">Name_of_file_there.pdf</div>
+          <div class="col-2 text-center">01.01.1900</div>
+          <div class="col-4 d-flex justify-content-center">
+            <button class="btn btn-primary me-1">Manage</button>
+            <button class="btn btn-success me-1 ms-1">Download</button>
+            <button class="btn btn-danger ms-1">Delete</button>
+          </div>
+        </div>
+        <div class="row m-2">
+          <div class="col-1 text-center"><fa-icon [icon]="faFile"></fa-icon> </div>
+          <div class="col-5 text-center">Name_of_file_there.pdf</div>
+          <div class="col-2 text-center">01.01.1900</div>
+          <div class="col-4 d-flex justify-content-center">
+            <button class="btn btn-primary me-1">Manage</button>
+            <button class="btn btn-success me-1 ms-1">Download</button>
+            <button class="btn btn-danger ms-1">Delete</button>
+          </div>
+        </div>
+        <div class="row m-2">
+          <div class="col-1 text-center"><fa-icon [icon]="faFile"></fa-icon> </div>
+          <div class="col-5 text-center">Name_of_file_there.pdf</div>
+          <div class="col-2 text-center">01.01.1900</div>
+          <div class="col-4 d-flex justify-content-center">
+            <button class="btn btn-primary me-1">Manage</button>
+            <button class="btn btn-success me-1 ms-1">Download</button>
+            <button class="btn btn-danger ms-1">Delete</button>
+          </div>
+        </div>
+        <div class="row m-2">
+          <div class="col-1 text-center"><fa-icon [icon]="faFile"></fa-icon> </div>
+          <div class="col-5 text-center">Name_of_file_there.pdf</div>
+          <div class="col-2 text-center">01.01.1900</div>
+          <div class="col-4 d-flex justify-content-center">
+            <button class="btn btn-primary me-1">Manage</button>
+            <button class="btn btn-success me-1 ms-1">Download</button>
+            <button class="btn btn-danger ms-1">Delete</button>
+          </div>
+        </div>
+        <div class="row m-2">
+          <div class="col-1 text-center"><fa-icon [icon]="faFile"></fa-icon> </div>
+          <div class="col-5 text-center">Name_of_file_there.pdf</div>
+          <div class="col-2 text-center">01.01.1900</div>
+          <div class="col-4 d-flex justify-content-center">
+            <button class="btn btn-primary me-1">Manage</button>
+            <button class="btn btn-success me-1 ms-1">Download</button>
+            <button class="btn btn-danger ms-1">Delete</button>
+          </div>
+        </div>
+        <div class="row m-2">
+          <div class="col-1 text-center"><fa-icon [icon]="faFile"></fa-icon> </div>
+          <div class="col-5 text-center">Name_of_file_there.pdf</div>
+          <div class="col-2 text-center">01.01.1900</div>
+          <div class="col-4 d-flex justify-content-center">
+            <button class="btn btn-primary me-1">Manage</button>
+            <button class="btn btn-success me-1 ms-1">Download</button>
+            <button class="btn btn-danger ms-1">Delete</button>
+          </div>
+        </div>
+        <div class="row m-2">
+          <div class="col-1 text-center"><fa-icon [icon]="faFile"></fa-icon> </div>
+          <div class="col-5 text-center">Name_of_file_there.pdf</div>
+          <div class="col-2 text-center">01.01.1900</div>
+          <div class="col-4 d-flex justify-content-center">
+            <button class="btn btn-primary me-1">Manage</button>
+            <button class="btn btn-success me-1 ms-1">Download</button>
+            <button class="btn btn-danger ms-1">Delete</button>
+          </div>
+        </div>
+        <div class="row m-2">
+          <div class="col-1 text-center"><fa-icon [icon]="faFile"></fa-icon> </div>
+          <div class="col-5 text-center">Name_of_file_there.pdf</div>
+          <div class="col-2 text-center">01.01.1900</div>
+          <div class="col-4 d-flex justify-content-center">
+            <button class="btn btn-primary me-1">Manage</button>
+            <button class="btn btn-success me-1 ms-1">Download</button>
+            <button class="btn btn-danger ms-1">Delete</button>
+          </div>
+        </div>
+        <div class="row m-2">
+          <div class="col-1 text-center"><fa-icon [icon]="faFile"></fa-icon> </div>
+          <div class="col-5 text-center">Name_of_file_there.pdf</div>
+          <div class="col-2 text-center">01.01.1900</div>
+          <div class="col-4 d-flex justify-content-center">
+            <button class="btn btn-primary me-1">Manage</button>
+            <button class="btn btn-success me-1 ms-1">Download</button>
+            <button class="btn btn-danger ms-1">Delete</button>
+          </div>
+        </div>
+        <div class="row m-2">
+          <div class="col-1 text-center"><fa-icon [icon]="faFile"></fa-icon> </div>
+          <div class="col-5 text-center">Name_of_file_there.pdf</div>
+          <div class="col-2 text-center">01.01.1900</div>
+          <div class="col-4 d-flex justify-content-center">
+            <button class="btn btn-primary me-1">Manage</button>
+            <button class="btn btn-success me-1 ms-1">Download</button>
+            <button class="btn btn-danger ms-1">Delete</button>
+          </div>
+        </div>
+        <div class="row m-2">
+          <div class="col-1 text-center"><fa-icon [icon]="faFile"></fa-icon> </div>
+          <div class="col-5 text-center">Name_of_file_there.pdf</div>
+          <div class="col-2 text-center">01.01.1900</div>
+          <div class="col-4 d-flex justify-content-center">
+            <button class="btn btn-primary me-1">Manage</button>
+            <button class="btn btn-success me-1 ms-1">Download</button>
+            <button class="btn btn-danger ms-1">Delete</button>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
