--- a/ClientApp/src/app/project-membersmanagement/project-membersmanagement.component.html
+++ b/ClientApp/src/app/project-membersmanagement/project-membersmanagement.component.html
@@ -23,6 +23,86 @@
             <button class="btn btn-danger ms-1">Remove access</button>
           </div>
         </div>
+        <div class="row m-2">
+          <div class="col-1 text-center"><fa-icon [icon]="faUser"></fa-icon> </div>
+          <div class="col-7 text-center">User@Email.com</div>
+          <div class="col-4 d-flex justify-content-center">
+            <button class="btn btn-warning me-1" (click)="redirectToManage(0,0)">Manage access</button>
+            <button class="btn btn-danger ms-1">Remove access</button>
+          </div>
+        </div>
+        <div class="row m-2">
+          <div class="col-1 text-center"><fa-icon [icon]="faUser"></fa-icon> </div>
+          <div class="col-7 text-center">User@Email.com</div>
+          <div class="col-4 d-flex justify-content-center">
+            <button class="btn btn-warning me-1" (click)="redirectToManage(0,0)">Manage access</button>
+            <button class="btn btn-danger ms-1">Remove access</button>
+          </div>
+        </div>
+        <div class="row m-2">
+          <div class="col-1 text-center"><fa-icon [icon]="faUser"></fa-icon> </div>
+          <div class="col-7 text-center">User@Email.com</div>
+          <div class="col-4 d-flex justify-content-center">
+            <button class="btn btn-warning me-1" (click)="redirectToManage(0,0)">Manage access</button>
+            <button class="btn btn-danger ms-1">Remove access</button>
+          </div>
+        </div>
+        <div class="row m-2">
+          <div class="col-1 text-center"><fa-icon [icon]="faUser"></fa-icon> </div>
+          <div class="col-7 text-center">User@Email.com</div>
+          <div class="col-4 d-flex justify-content-center">
+            <button class="btn btn-warning me-1" (click)="redirectToManage(0,0)">Manage access</button>
+            <button class="btn btn-danger ms-1">Remove access</button>
+          </div>
+        </div>
+        <div class="row m-2">
+          <div class="col-1 text-center"><fa-icon [icon]="faUser"></fa-icon> </div>
+          <div class="col-7 text-center">User@Email.com</div>
+          <div class="col-4 d-flex justify-content-center">
+            <button class="btn btn-warning me-1" (click)="redirectToManage(0,0)">Manage access</button>
+            <button class="btn btn-danger ms-1">Remove access</button>
+          </div>
+        </div>
+        <div class="row m-2">
+          <div class="col-1 text-center"><fa-icon [icon]="faUser"></fa-icon> </div>
+          <div class="col-7 text-center">User@Email.com</div>
+          <div class="col-4 d-flex justify-content-center">
+            <button class="btn btn-warning me-1" (click)="redirectToManage(0,0)">Manage access</button>
+            <button class="btn btn-danger ms-1">Remove access</button>
+          </div>
+        </div>
+        <div class="row m-2">
+          <div class="col-1 text-center"><fa-icon [icon]="faUser"></fa-icon> </div>
+          <div class="col-7 text-center">User@Email.com</div>
+          <div class="col-4 d-flex justify-content-center">
+            <button class="btn btn-warning me-1" (click)="redirectToManage(0,0)">Manage access</button>
+            <button class="btn btn-danger ms-1">Remove access</button>
+          </div>
+        </div>
+        <div class="row m-2">
+          <div class="col-1 text-center"><fa-icon [icon]="faUser"></fa-icon> </div>
+          <div class="col-7 text-center">User@Email.com</div>
+          <div class="col-4 d-flex justify-content-center">
+            <button class="btn btn-warning me-1" (click)="redirectToManage(0,0)">Manage access</button>
+            <button class="btn btn-danger ms-1">Remove access</button>
+          </div>
+        </div>
+        <div class="row m-2">
+          <div class="col-1 text-center"><fa-icon [icon]="faUser"></fa-icon> </div>
+          <div class="col-7 text-center">User@Email.com</div>
+          <div class="col-4 d-flex justify-content-center">
+            <button class="btn btn-warning me-1" (click)="redirectToManage(0,0)">Manage access</button>
+            <button class="btn btn-danger ms-1">Remove access</button>
+          </div>
+        </div>
+        <div class="row m-2">
+          <div class="col-1 text-center"><fa-icon [icon]="faUser"></fa-icon> </div>
+          <div class="col-7 text-center">User@Email.com</div>
+          <div class="col-4 d-flex justify-content-center">
+            <button class="btn btn-warning me-1" (click)="redirectToManage(0,0)">Manage access</button>
+            <button class="btn btn-danger ms-1">Remove access</button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
